// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DirectDebitSection should match snapshot 1`] = `
<Component>
  <Component>
    Direct Debit
  </Component>
  <Component>
    As you are providing a Reapit Reference, we will need to validate your account with our Accounts Department. Once confirmed, any subscriptions will be added to your existing monthly Direct Debit. Please now click ‘Save’ to submit your account information
  </Component>
</Component>
`;

exports[`DirectDebitSection should match snapshot 2`] = `
<Component>
  <Component>
    Direct Debit
  </Component>
  <Component>
    You will need to setup a Direct Debit before you can make any subscriptions within the Developers Portal, this includes submitting an app for approval and listing an app within the Marketplace. Once completed your account will be verified by our Account Department.
  </Component>
  <Component>
    Setup Direct Debit
  </Component>
</Component>
`;
